@@ -2,6 +2,8 @@ Post v22.06.0
 -------------
   - ovn-controller: Add configuration knob, through OVS external-id
     "ovn-encap-df_default" to enable or disable tunnel DF flag.
+  - Add option "localnet_learn_fdb" to LSP that will allow localnet
+    ports to learn MAC addresses and store them in FDB table.
 
 OVN v22.06.0 - XX XXX XXXX
 --------------------------
